--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -362,23 +362,24 @@ reject $H_0$. i.e. there is not sufficient evidence to support that there is a
 difference in the mean strengths of Alloy 1 and Alloy 2 rods.
 
 \subsection{}%5b
-What are the assumptions about the distribution of strength required to make the
-tests in part (a) valid?  Do the assumptions hold?  Explain briefly. It is not
-required to verify the assumptions with Excel.
+% What are the assumptions about the distribution of strength required to make the
+% tests in part (a) valid?  Do the assumptions hold?  Explain briefly. It is not
+% required to verify the assumptions with Excel.
 
 The assumptions to make the tests in part (a) valid are as follows:
-
 \begin{enumerate}
- \item
+ \item The samples are independent and random
+ \item The samples come from a normal population,
+       OR from a population with sample size 30 or greater
+       (The Central Limit Theorem guarantees samples are normally distributed
+       when the population size is $\geq 30$)
+ \item the populations have unequal variances
 \end{enumerate}
 
-WHat are the assumptions for the t-test?
-
-The following assumptions must be true for a t-test:
-\begin{enumerate}
- \item
-\end{enumerate}
-The Central Limit Theorem..............
+The first two assumptions outlined hold for the test above, as we were told that the
+rods were randomly selected, and the sample size of the population is 30.
+\textbf{The population variances are unknown so we don't know if the 3rd assumption is valid?!}
+% WHat are the assumptions for the t-test?
 
 \section{}%6
 Th e  thirty  ALLOY  2  rods  were  subjected  to  a  combination  of  high
