--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -324,7 +324,7 @@ We'll do the two-tailed t-test as follows:
 % since it works for equal and unequal
 % variances, and the population variances are unknown.
 Since, the population variances are unknown, we'll assume unequal variances.
-$$H_0: \mu_1 - \mu_2 = 0 \quad vs. \quad H_A: \mu_1 - \mu_2 \neq 0 $$
+$$H_0: \mu_1 = \mu_2 \quad vs. \quad H_A: \mu_1 \neq \mu_2 $$
 
 % Output: t-test output from Excel. For Hypotheses, is this one or 2 tailed?
 % Choose the correct t-test.
@@ -382,9 +382,9 @@ rods were randomly selected, and the sample size of the population is 30.
 % WHat are the assumptions for the t-test?
 
 \section{}%6
-Th e  thirty  ALLOY  2  rods  were  subjected  to  a  combination  of  high
-pressure  and  temperature.  In  this  question , you will estimate the effect
-of the treatment on the mean strength of the rods.
+% Th e  thirty  ALLOY  2  rods  were  subjected  to  a  combination  of  high
+% pressure  and  temperature.  In  this  question , you will estimate the effect
+% of the treatment on the mean strength of the rods.
 
 \subsection{}%6a
 Do the data provide evidence that the treatment increased the mean s trength of
