--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -433,7 +433,28 @@ Use the  Descriptive Statistics feature in  the  Data Analysis menu to obtain a
 the difference in strength between ALLOY 2 + TREATMENT rods and ALLOY 2 rods. Is
 the interval consistent with the  test  outcome in part  (a)? Explain briefly.
 
-paste summary statistics from excel
+\begin{table}[H]
+ \centering
+ \begin{tabular}{|c|c|}
+  \hline
+  Mean                     & 1.55     \\ \hline
+  Standard Error           & 0.091695 \\ \hline
+  Median                   & 1.6      \\ \hline
+  Mode                     & 2        \\ \hline
+  Standard Deviation       & 0.502236 \\ \hline
+  Sample Variance          & 0.252241 \\ \hline
+  Kurtosis                 & 0.942104 \\ \hline
+  Skewness                 & -0.9204  \\ \hline
+  Range                    & 2.2      \\ \hline
+  Minimum                  & 0.1      \\ \hline
+  Maximum                  & 2.3      \\ \hline
+  Sum                      & 46.5     \\ \hline
+  Count                    & 30       \\ \hline
+  Confidence Level(95.0\%) & 0.187538 \\ \hline
+ \end{tabular}
+ \caption{My caption}
+ \label{my-label}
+\end{table}
 
 \subsection{}%6c
 What are the  assumptions necessary to make the test in part (a) and confidence
