--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -77,14 +77,13 @@ Keeping other parameters constant, changing the confidence level yields the folo
   0.95             & 0.357839        \\ \hline
   0.99             & 0.470280        \\ \hline
  \end{tabular}
- \caption{My caption}
+ \caption{Confidence levels and the corresponding Margins of Error}
  \label{1a}
 \end{table}
 % How does the margin of
 % error change as the confidence interval increases? Explain briefly.
 As seen in Table \ref{1a} above, the Margin of Error increases as the
-Confidence Level is increased. This makes sense because the margin of error depends on the z value, which increases as ($1-\alpha$) increases.
-
+Confidence Level is increased. This makes sense because the margin of error depends on the z value, which also increases as the Confidence Level ($1-\alpha$) increases.
 
 
 \subsection{}%1b
@@ -98,7 +97,7 @@ Confidence Level is increased. This makes sense because the margin of error depe
   0.95             & 0.06                                                                                 \\ \hline
   0.99             & 0.02                                                                                 \\ \hline
  \end{tabularx}
- \caption{My caption}
+ \caption{Observed fraction of intervals that failed to cover the hypothesized population mean at various confidence levels.}
  \label{1b}
 \end{table}
 
@@ -124,7 +123,7 @@ $$ H_0: \mu=64 \quad vs. \quad H_A: \mu \neq 64 $$
   0.05                  & 94                                                   & 0.94                         \\ \hline
   0.01                  & 98                                                   & 0.98                         \\ \hline
  \end{tabularx}
- \caption{My caption}
+ \caption{Samples that led to the rejection of $H_0$ at different levels of significance.}
  \label{2a}
 \end{table}
 
@@ -192,7 +191,7 @@ The confidence interval is calculated as the mean $\pm$ the confidence level $1-
   Count                    & 30          \\ \hline
   Confidence Level(95.0\%) & 0.738287948 \\ \hline
  \end{tabular}
- \caption{My caption}
+ \caption{Summary statistics for Alloy 1}
  \label{3a1}
 \end{table}
 
@@ -218,7 +217,7 @@ $$65.09 \pm 0.738287948 \approx (64.352, 65.828)$$
   Count                    & 30          \\ \hline
   Confidence Level(95.0\%) & 0.342784524 \\ \hline
  \end{tabular}
- \caption{My caption}
+ \caption{Summary statistics for Alloy 2}
  \label{3a2}
 \end{table}
 
@@ -254,7 +253,8 @@ $$65.27333333 \pm 0.342784524 \approx (64.931, 65.616)$$
 % the two alloys has better strength qualities? Explain briefly.\\
 
 Alloy 2 appears to be stronger, since it has a higher mean, median and mode
-compared to Alloy 1.
+compared to Alloy 1. \textbf{do we mention the confidence interval here}
+%NOTE
 % It can also be noted that the confidence interval for
 % Alloy 2 is contained within the confidence interval of Alloy 1, which means
 % that more data points for Alloy 1 can be found at lower value
