--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -167,14 +167,13 @@ $$H_0: \mu \in (63.642161, 64.357839)$$
 
 \subsubsection*{99\% confidence interval null hypothesis}
 The 95\% confidence interval is calculated as follows:
-$$64 \pm 0.470280 = (63.52972, 64047028)$$
+$$64 \pm 0.470280 = (63.52972, 64.47028)$$
 Thus, the null hypothesis is:
-$$H_0: \mu \in (63.52972, 64047028)$$
+$$H_0: \mu \in (63.52972, 64.47028)$$
 
 \subsubsection*{When is the null hypothesis rejected?}
-The null hypothesis $H_0$ is rejected when the test statistic
+The null hypothesis $H_0$ is rejected when the sample mean
 does not fall within the confidence interval with significance $\alpha$.
-The confidence interval is calculated as the mean $\pm$ the confidence level $1-\alpha$
 
 
 \section{}%3
@@ -263,7 +262,8 @@ $$65.27333333 \pm 0.342784524 \approx (64.931, 65.616)$$
 % the two alloys has better strength qualities? Explain briefly.\\
 
 Alloy 2 appears to be stronger, since it has a higher mean, median and mode
-compared to Alloy 1. \textbf{do we mention the confidence interval here}
+compared to Alloy 1.
+% \textbf{do we mention the confidence interval here}
 %NOTE
 % It can also be noted that the confidence interval for
 % Alloy 2 is contained within the confidence interval of Alloy 1, which means
@@ -514,12 +514,13 @@ and confidence interval in part (b) valid:
        OR from a population with sample size 30 or greater
        (The Central Limit Theorem guarantees samples are normally distributed
        when the population size is $\geq 30$)
- \item the samples are paired?
+ \item The sample data is paired.
 \end{enumerate}
 
-The first two assumptions hold, as we were told that the
-rods were randomly selected, and the sample size of the population is 30.
-\textbf{IS there more to be said here}
+The first two assumptions hold, as we were told that the rods were randomly
+selected, and the sample size of the population is 30. We know the data is
+paired, since both samples have to do with Alloy 2, just that in one sample,
+Alloy 2 is treated, so the third assumption also holds.
 %NOTE
 
 \subsection{}%6d
